# FaceD

./: .gitignore  MANIFEST.in  Pipfile  README.Rmd  README.md  _BUILD.ps1  _INSTALL_PKG.ps1  _TEST_PKG.ps1  _TWINE.ps1  generate_gitignore.py  requirements.txt  setup.cfg  setup.py
src/faced/: load_data.py
src/faced.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/faced/classifiers/: __init__.py  eye_classifier.py  face_classifier.py
src/faced/convert/: converters.py
src/faced/cv_utils/: __init__.py  cv_utils.py
src/faced/main/: __init__.py  faced.py  faced_by_keyword.py
src/faced/pil_utils/: __init__.py  pil_utils.py
src/faced/tests/: __init__.py  test_classifiers.py  test_converters.py  test_cvutils.py  test_load_data.py  test_main.py  test_makeinit.py
src/faced/utils/: folder_size.py  make_init.py  ram_stats.py
