[metadata]
name = FaceD
version = 0.0.4
author = Tingwei Adeck  
author_email = awesome.tingwei@outlook.com
description = FaceD for Static face detection
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/AlphaPrime7/faced
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src




